Cuenta Corriente Ampliada

--- a/uimodule/webapp/i18n/i18n.properties
+++ b/uimodule/webapp/i18n/i18n.properties
@@ -22,10 +22,10 @@ Vencido        = Vencido según fecha máxima de entrega
 Total          = Total
 PosicionPro    = POSICIÓN FINAL PROYECTADA
 MontoFavor     = Monto a favor o vencido a la fecha
-saldoFin       = 1 - SALDO FINAL CUENTA CORRIENTE
-saldoCer       = 2 - SALDO CEREAL ENTREGADO O LIQUIDADO PENDIENTE DE ENTREGA
-cupoSol        = 3 - CUPOS SOLICITADOS / MERCADERÍA ENTREGADA SIN DOCUMENTAR / MERCADERÍA RETIRADA DE A y B
-lineaCred      = 4 - LINEA DE CREDITO DISPONIBLE
+saldoFin       = 1 - Saldo final cuenta corriente
+saldoCer       = 2 - Saldo cereal entregado o liquidado pendiente de entrega
+cupoSol        = 3 - Cupos solicitados / mercadería entregada sin documentar / mercadería retirada de a y b
+lineaCred      = 4 - Línea de crédito disponible
 movConf        = TOTAL MOVIMIENTOS A CONFORMAR
 detalleCereal  = Detalle de Cereal
 saldoComp      = Saldo Compensación en Cuenta Corriente
