--- a/uimodule/webapp/i18n/i18n_en.properties
+++ b/uimodule/webapp/i18n/i18n_en.properties
@@ -13,7 +13,7 @@ movConf        = MOVIMIENTOS A CONFORMAR
 acuerdosCo     = Negocios Comprometidos
 acuerdosVenF   = A vencer según fecha de negocio
 acuerdosVen    = Vencidos según fecha de negocio
-totalAcuer     = 5 - TOTAL NEGOCIOS COMPROMETIDOS
+totalAcuer     = 5 - Total negocios comprometidos
 canjeCeral     = Canje de cereal pendiente de entregar
 CPOPendGal     = CPD Pendiente de Acreditarse (Banco Galicia)
 CPOPendRio     = CPD Pendiente de Acreditarse (Banco Río)
@@ -22,10 +22,10 @@ Vencido        = Vencido según fecha máxima de entrega
 Total          = Total
 PosicionPro    = POSICIÓN FINAL PROYECTADA
 MontoFavor     = Monto a favor o vencido a la fecha
-saldoFin       = 1 - SALDO FINAL CUENTA CORRIENTE
-saldoCer       = 2 - SALDO CEREAL ENTREGADO O LIQUIDADO PENDIENTE DE ENTREGA
-cupoSol        = 3 - CUPOS SOLICITADOS / MERCADERÍA ENTREGADA SIN DOCUMENTAR / MERCADERÍA RETIRADA DE A y B
-lineaCred      = 4 - LINEA DE CREDITO DISPONIBLE
+saldoFin       = 1 - Saldo final cuenta corriente
+saldoCer       = 2 - Saldo cereal entregado o liquidado pendiente de entrega
+cupoSol        = 3 - Cupos solicitados / mercadería entregada sin documentar / mercadería retirada de a y b
+lineaCred      = 4 - Línea de crédito disponible
 movConf        = TOTAL MOVIMIENTOS A CONFORMAR
 detalleCereal  = Detalle de Cereal
 saldoComp      = Saldo Compensación en Cuenta Corriente
@@ -47,8 +47,8 @@ detCerEnt      = Detalle de Cereal Pendiente de Entrega
 detChePago     = Detalle de Cheques de Pago Diferido
 totalRegis     = Total Registros
 detalleCereal  = Detalle de Canje de cereal pendiente de entregar al
-contratos      = CONTRATOS DE GRANO PENDIENTE DE ENTREGA
-cheques        = CHEQUES DE PAGOS DIFERIDOS PENDIENTE DE ACREDITARSE
+contratos      = Contratos de grano pendiente de entrega
+cheques        = Cheques de pagos diferidos pendiente de acreditarse
 mercaderia     = Mercaderia Pendiente De Retiro
 detNegocio     = Detalle Negocio Comprometido
 
